dataset1235/2025-2/2868285114/users/2008605748/executions/3071719669_3968058195.log
== RUN (2025-08-28 22:23:38)
-- CODE: 
p = float(input())
peso_argentino = 0,018
valorEmreais = peso_argentino 0.018
valorEmreaiseais = p * 2
* 2

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:22:37)
-- CODE: 
p = float(input())
peso_argentino = 0,018
valorEmreais = peso_argentino 0.018
Valor em reais = peso_argentino * 2

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:23:39)
-- CODE: 
p = float(input())
peso_argentino = 0,018
valorEmreais = peso_argentino 0.018
valorEmreaiseais = p * 2

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:20:07)
-- CODE: 
p = float(input())
peso_argentino = 0,018
valorEmreais = peso_argentino
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:23:23)
-- CODE: 
p = float(input())
peso_argentino = 0,018
valorEmreais = peso_argentino 0.018
valorEmreaiseais = p * 2

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:23:38)
-- CODE: 
p = float(input())
peso_argentino = 0,018
valorEmreais = peso_argentino 0.018
valorEmreaiseais = p * 2
* 2

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:25:57)
-- CODE: 
p = float(input(""))
peso_argentino = 0.018
valorEmreais = peso_argentino * p
print(round(valorEmreais, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
---- user output:
0.02
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
---- user output:
0.04
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
---- user output:
0.14
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
---- user output:
0.38
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
---- user output:
0.34
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
---- user output:
0.16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:22:51)
-- CODE: 
p = float(input())
peso_argentino = 0,018
valorEmreais = peso_argentino 0.018
Valor em reais = p * 2

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:22:54)
-- CODE: 
p = float(input())
peso_argentino = 0,018
valorEmreais = peso_argentino 0.018
Valor em reais = p * 2

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:25:58)
-- CODE: 
p = float(input(""))
peso_argentino = 0.018
valorEmreais = peso_argentino * p
print(round(valorEmreais, 2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
---- user output:
0.02
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
---- user output:
0.04
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
---- user output:
0.14
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
---- user output:
0.38
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
---- user output:
0.34
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
---- user output:
0.16
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:25:29)
-- CODE: 
p = float(input())
peso_argentino = 0,018
valorEmreais = peso_argentino * p
print(round(valorEmreais, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:20:10)
-- CODE: 
p = float(input())
peso_argentino = 0,018
valorEmreais = peso_argentino
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:22:36)
-- CODE: 
p = float(input())
peso_argentino = 0,018
valorEmreais = peso_argentino 0.018
Valor em reais = peso_argentino * 2

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:25:29)
-- CODE: 
p = float(input())
peso_argentino = 0,018
valorEmreais = peso_argentino * p
print(round(valorEmreais, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:25:38)
-- CODE: 
p = float(input(""))
peso_argentino = 0,018
valorEmreais = peso_argentino * p
print(round(valorEmreais, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:16:44)
-- CODE: 
p = float(input())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
---- user output:
None
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
---- user output:
None
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
---- user output:
None
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
---- user output:
None
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
---- user output:
None
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:25:28)
-- CODE: 
p = float(input())
peso_argentino = 0,018
valorEmreais = peso_argentino * p
print(round(valorEmreais, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:24:16)
-- CODE: 
p = float(input())
peso_argentino = 0,018
valorEmreais = peso_argentino 0.018
peso_argentino = p * 2

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:24:17)
-- CODE: 
p = float(input())
peso_argentino = 0,018
valorEmreais = peso_argentino 0.018
peso_argentino = p * 2

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:25:38)
-- CODE: 
p = float(input(""))
peso_argentino = 0,018
valorEmreais = peso_argentino * p
print(round(valorEmreais, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:23:22)
-- CODE: 
p = float(input())
peso_argentino = 0,018
valorEmreais = peso_argentino 0.018
valorEmreaiseais = p * 2

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:24:56)
-- CODE: 
p = float(input())
peso_argentino = 0,018
valorEmreais = peso_argentino * p


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:23:39)
-- CODE: 
p = float(input())
peso_argentino = 0,018
valorEmreais = peso_argentino 0.018
valorEmreaiseais = p * 2

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:22:34)
-- CODE: 
p = float(input())
peso_argentino = 0,018
valorEmreais = peso_argentino 0.018
Valor em reais = peso_argentino * 2

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:25:39)
-- CODE: 
p = float(input(""))
peso_argentino = 0,018
valorEmreais = peso_argentino * p
print(round(valorEmreais, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:23:38)
-- CODE: 
p = float(input())
peso_argentino = 0,018
valorEmreais = peso_argentino 0.018
valorEmreaiseais = p * 2

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
File "XXXX", line 2
    peso_argentino = 0,018
                       ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
